	version 0.6.5

	1) changement nom version.
	2) dans bf et df ameliore un peu rapidite: k02 et kpara
	
	----------------------------------------------------------------
	version 0.6.4

	1) nprochefft=0 si demande large field mais en fait np=0 pour
	toutes les composantes. Evite de refaire un calcul pour rien.
	2) dans recalcul de la fonction de Green, la pola était mal
	recalculee dans le cas anisotrope.
	3) Ecriture energie et flux en concordance avec notation de la
	surface.
	4) Ecriture pour holography en accord avec la surface.

	----------------------------------------------------------------
	version 0.6.3

	1) changement des options de compilation pour éviter bug de beam
	64.
	2) Correction erreur sur bf. Confusion deltak incident et
	diffracte, de meme pour imaxk0 entre diffracte et incident
	3) bf: icomp de trop sur le champ incident: enleve.
	4) change dans microbf quand non rapide oublie initialise de
	imaxk0 quand 2) a ete fait.
	5) dark field Confusion deltak incident et
	diffracte, de meme pour imaxk0 entre diffracte et incident
	6) df: icomp pas de trop sur le champ incident car dephase de pi
	pour le contraste de phase.
	7) pb dans instuction OMP de df et bf, il manquait
	u,v,zfocus,sintmp et costmp
	8) dans cdmlib ecrivait nprochefft avant de le calculer.
	9) changement microssansinc pour faire comme le df et bf en
	transmission avec correction des memes erreurs...

	----------------------------------------------------------------
	version 0.6.2

	1) change chap1*.tex pour inclure la nouvelle methode de
	compilation. Recompilation des userguides.
	2) Changement titre de la fenetre.


	----------------------------------------------------------------
	version 0.6.1

	1) Brightfield change pour le nombre d'incidence car trop grand
	par defaut.  Maintenant base sur delta k=2*pi /(2L) et multiple de
	deltakx=2 pi/ (a*N) pour éviter les problèmes d'arrondi si on ne
	tombe pas sur un point incident de fourier.